[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "sipa"
author = "AG DSN"
# dynamic = ["version"]
version = "0.1.0"

[tool.uv-dynamic-versioning]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
]
# to look up the meaning of specific rule IDs, use `ruff rule $id`
select = [
    "E",
    "F",
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E741",  # ambiguous variable names
    "E501",  # line length violations (for now)
]
unfixable = [
    "B",  # fixing bug hazards requires knowledge about the intention
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]

[tool.pytest.ini_options]
python_files = [
    "*assert*.py",
    "test_*.py",
]

