[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "sipa"
author = "AG DSN"
# dynamic = ["version"]
version = "0.1.0"
requires-python = ">= 3.12"
dependencies = [
    "flask ~= 3.0.0",
    "flask-babel ~= 4.0.0",
    "Flask-Login ~= 0.6.1",
    "flask-wtf ~= 1.2.1",
    "babel ~= 2.17.0",
    "SQLAlchemy ~= 1.4.40",
    "Markdown ~= 3.4.1",
    "requests ~= 2.28.1",
    "Flask-FlatPages ~= 0.8.3",
    "pygal ~= 3.0.0",
    "GitPython ~= 3.1.27",
    "PyMySQL ~= 1.0.2",
    "blinker ~= 1.5",
    "factory-boy ~= 3.2.1",
    "psycopg2 ~= 2.9.3",
    "Flask-QRcode ~= 3.1.0",
    "email_validator ~= 1.2.1",
    "Werkzeug ~= 3.0.1",
    "sentry-sdk[flask] ~= 1.34.0",
    # Pin to avoid incompatibility
    "jinja2 ~= 3.1.2",
    "MarkupSafe ~= 2.1.1",
    "recurring_ical_events ~= 1.0.2b0",
    "cachetools ~= 5.2.0",
    "python-dotenv ~= 0.21.0",
    "pydantic ~= 2.11.7",
    # "-e wtforms_widgets",
]
[dependency-groups]
dev = [
    "coverage ~= 4.4.1",
    "Flask-Testing ~= 0.8.1",
    "profilehooks ~= 1.9.0",
    "pycodestyle ~= 2.4.0",
    "mypy ~= 0.960",
    "sphinx ~= 1.8.4",
    "pytest ~= 7.4.3",
    "pytest-cov ~= 2.10.1",
    "time_machine ~= 2.19.0",
    "types-wtforms>=3.2.1.20250809",
]

[tool.uv-dynamic-versioning]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
]
# to look up the meaning of specific rule IDs, use `ruff rule $id`
select = [
    "E",
    "F",
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E741",  # ambiguous variable names
    "E501",  # line length violations (for now)
]
unfixable = [
    "B",  # fixing bug hazards requires knowledge about the intention
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]

[tool.pytest.ini_options]
python_files = [
    "*assert*.py",
    "test_*.py",
]

